# jobops

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml  pyproject.toml
.github/workflows/: poll.yml
data/: watchlist.yaml
docs/: DESIGN.md  PROGRESS.md
jobops/: db.py  models.py
jobops/enrich/: __init__.py  dedup.py  retention.py  sponsor_match.py
jobops/etl/: uscis_hub.py
jobops/ingest/: __init__.py  ashby.py  common.py  github_repos.py  greenhouse.py  lever.py  smartrecruiters.py
jobops/notify/: __init__.py  discord.py
migrations/: 001_core.sql  002_jobs_note.sql  003_sponsors.sql
scripts/: backup.sh  check_watchlist.py  migrate.py  poll_all.py
tests/: conftest.py  test_db_smoke.py  test_dedup.py  test_ingest_common.py  test_migrate.py  test_pollers.py  test_shard.py  test_sponsor_match.py
tests/fixtures/: ashby_sample.json  github_listings_sample.json  greenhouse_sample.json  lever_sample.json  smartrecruiters_detail_sample.json  smartrecruiters_sample.json
